.deploy/k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noise-explorer
  namespace: noise-explorer
  labels:
    app: noise-explorer
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: noise-explorer
status:
  loadBalancer: {}
